<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ItemsListFragment"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/main_bg_orange_curved"
        app:layout_constraintDimensionRatio="1:1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/iv_thumb"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/main_bg_yellow_curved"
        android:transitionName="@string/transition_thumb"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="@+id/iv_background"
        app:layout_constraintTop_toTopOf="@+id/iv_background" />

    <ImageView
        android:id="@+id/iv_download"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:background="@drawable/main_bg_green_curved"
        android:transitionName="@string/transition_download"
        app:layout_constraintBottom_toBottomOf="@+id/iv_background"
        app:layout_constraintEnd_toEndOf="@+id/iv_background"
        app:layout_constraintStart_toStartOf="@+id/iv_background" />

</androidx.constraintlayout.widget.ConstraintLayout>